<resources>
    <string name="app_name">HoopsTracker</string>

    <!--Login activity-->
    <string name="email_verify_prompt">Please verify your email</string>
    <string name="incorrect_credentials">Incorrect credentials</string>
    <string name="connection_error">Connection error</string>
    <string name="passwordTxt">Password</string>
    <string name="confirmPasswordTxt">Confirm password</string>
    <string name="register">Register here</string>
    <string name="register_btn">Register</string>
    <string name="emailTxt">E-mail</string>
    <string name="login">Sign in</string>
    <string name="acc_creation_failed">User registration failed</string>
    <string name="complete_fields">Complete all fields</string>
    <string name="password_mismatch">Passwords don\'t match</string>
    <string name="verification_email">Verification email sent</string>
    <string name="register_succeeded">Register succeeded</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
