<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/registerLayout"
                tools:context=".RegisterActivity">


    <EditText
            android:id="@+id/registerEmailTxt"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:drawableStart="@drawable/ic_login_user"
            android:layout_marginTop="100dp"
            android:padding="10dp"
            android:ems="10"
            android:hint="@string/emailTxt"
            android:inputType="textEmailAddress" />


    <EditText
            android:id="@+id/registerPasswordTxt"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerEmailTxt"
            android:layout_centerHorizontal="true"
            android:drawableStart="@drawable/ic_password"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/passwordTxt"
            android:inputType="textPassword"/>

    <EditText
            android:id="@+id/registerConfirmPasswordTxt"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerPasswordTxt"
            android:layout_centerHorizontal="true"
            android:drawableStart="@drawable/ic_password"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/confirmPasswordTxt"
            android:inputType="textPassword"/>

    <Button
            android:id="@+id/registerBtn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@+id/registerConfirmPasswordTxt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_login"
            android:letterSpacing="0.3"
            android:text="@string/register_btn" />


</RelativeLayout>
