<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_animation"
                tools:context="com.example.kamillog.hoopstracker.LoginActivity">


    <EditText
            android:id="@+id/emailText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/passwordText"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="70dp"
            android:drawableStart="@drawable/ic_login_user"
            android:ems="10"
            android:hint="@string/emailTxt"
            android:inputType="textEmailAddress" />

    <EditText
            android:id="@+id/passwordText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/loginBtn"
            android:layout_alignStart="@+id/emailText"
            android:layout_marginBottom="80dp"
            android:drawableStart="@drawable/ic_password"
            android:ems="10"
            android:hint="@string/passwordTxt"
            android:inputType="textPassword" />

    <Button
            android:id="@+id/loginBtn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_above="@+id/googleBtn"
            android:layout_alignStart="@+id/googleBtn"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_login"
            android:letterSpacing="0.3"
            android:text="@string/login" />

    <com.google.android.gms.common.SignInButton
            android:id="@+id/googleBtn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_above="@+id/registerText"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="22dp" />

    <TextView
            android:id="@+id/registerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="36dp"
            android:letterSpacing="0.1"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/register"
            android:textColor="@color/colorPrimary" />


</RelativeLayout>
